--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "lightningcss": "^1.30.2",
     "sass": "^1.94.2",
     "tailwindcss": "^4",
     "typescript": "^5"
